--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.3.2
+-----
+* Allow local HEAD to be ahead of remote HEAD
+* Handle case if there's no previous release
+
 0.3.1
 -----
 * First version on crates.io
