--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.3.5
+-----
+* Add option (rusty-release current) to make a release of the current version
+
 0.3.4
 -----
 * Support $EDITOR and $VISUAL as editor commands
