--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.7.1
+-----
+* Minor updates
+
 0.7.0
 -----
 * Fix update of version in 'Cargo.toml', might also have updated versions of dependencies
